; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_pulse.c_RemoveSource.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_pulse.c_RemoveSource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }
%struct.device = type { i32 }

@cmpsrc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @RemoveSource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RemoveSource(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca %struct.device*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %5, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* @cmpsrc, align 4
  %14 = call i8** @tfind(i32* %4, i32* %12, i32 %13)
  store i8** %14, i8*** %6, align 8
  %15 = load i8**, i8*** %6, align 8
  %16 = icmp eq i8** %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  br label %29

18:                                               ; preds = %2
  %19 = load i8**, i8*** %6, align 8
  %20 = load i8*, i8** %19, align 8
  %21 = bitcast i8* %20 to %struct.device*
  store %struct.device* %21, %struct.device** %7, align 8
  %22 = load %struct.device*, %struct.device** %7, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* @cmpsrc, align 4
  %26 = call i32 @tdelete(%struct.device* %22, i32* %24, i32 %25)
  %27 = load %struct.device*, %struct.device** %7, align 8
  %28 = call i32 @DestroySource(%struct.device* %27)
  br label %29

29:                                               ; preds = %18, %17
  ret void
}

declare dso_local i8** @tfind(i32*, i32*, i32) #1

declare dso_local i32 @tdelete(%struct.device*, i32*, i32) #1

declare dso_local i32 @DestroySource(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
